--- a/catkin_ws/src/frontier-exploration/CMakeLists.txt
+++ b/catkin_ws/src/frontier-exploration/CMakeLists.txt
@@ -8,6 +8,7 @@ project(frontier-exploration)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  roscpp
   geometry_msgs
   rospy
   std_msgs
